fix text input zoom on iphone hopefully

--- a/app/assets/stylesheets/staticpages.css.sass
+++ b/app/assets/stylesheets/staticpages.css.sass
@@ -156,5 +156,6 @@ html
   .status-text-container
     position: relative
     left: 1em
-
+  #status-input
+    font-size: 1em
 
